Added components and base app logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,38 @@
 <div class="main-page">
+    <div class="main-page-top">
+        <app-header (logoClicked)="toHome()"></app-header>
+    </div>
+
     <div class="main-page-content">
-        <router-outlet></router-outlet>
+        <div class="h-100 overflow-auto">
+            <mat-sidenav-container (backdropClick)="toggleSidenav()" autosize>
+                <mat-sidenav #sidenav="matSidenav" [opened]="sidenavOpened$ | async">
+                    <mat-nav-list class="nav-list-padding unselectable">
+                        <mat-list-item class="mat-list-height" [ngClass]="{'active-item': item.clicked}"
+                            *ngFor="let item of sideNavItems; let i = index" (click)="itemClicked(i)">
+                            <mat-icon mat-list-icon class="grey-color">{{item.icon}}</mat-icon>
+                            <div mat-line class="fs-12 font-metropolis-regular md-spaced-text light-black-color">
+                                {{item.text}}</div>
+                        </mat-list-item>
+                    </mat-nav-list>
+                </mat-sidenav>
+
+                <mat-sidenav-content>
+                    <div class="content-container">
+                        <router-outlet></router-outlet>
+                    </div>
+                </mat-sidenav-content>
+            </mat-sidenav-container>
+        </div>
+    </div>
+
+    <!-- TODO CHECK IF THE BELOW DIV NEEDED - ORIGINALLY FOR UPDATING THE SIDENAV ITEMS CORRECTLY -->
+    <div class="main-page-content">
+        <div class="h-100 overflow-auto">
+            <app-login (login)="toHome()"></app-login>
+        </div>
     </div>
 </div>
+
+<!-- TODO ADD LOADER -->
+<!-- <app-loader></app-loader> -->
