Added images and made compile successful

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,5 @@
 .login-background {
-  background-image: url("../../assets/login.jpg");
+  background-image: url("../../assets/login-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
