--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     </button>
   </div>
   <div class="col-auto pointer h-100 d-flex align-items-center pr-0 unselectable" routerLink="/home" (click)="redirectToHome()">
-    <img src="./../../assets/rocket-logo-alternate.svg" alt="Postworks Logo">
+    <img src="./../../assets/logo/logo_transparent.png" alt="NBU Logistics Logo">
   </div>
   <div class="col h-100 d-flex justify-content-end align-items-center pl-0">
     <div class="row h-100">
