--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
     <div class="row h-100 m-0 justify-content-center align-items-center">
       <div class="col-8 mb-4">
         <div class="unselectable mb-4">
-          <img src="../../assets/rocket-logo.svg" alt="Postworks Logo">
+          <img src="../../assets/logo/logo_transparent.png" alt="NBU Logistics Logo">
         </div>
         <div class="fs-48 main-title-text mb-3 font-metropolis-semi-bold">
           Login
