--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,12 +26,16 @@
         </div>
     </div>
 
-    <!-- TODO CHECK IF THE BELOW DIV NEEDED - ORIGINALLY FOR UPDATING THE SIDENAV ITEMS CORRECTLY -->
+    <!-- TODO CHECK IF THE BELOW DIV NEEDED - ORIGINALLY FOR UPDATING THE SIDENAV ITEMS CORRECTLY WHEN LOGGING IN -->
     <!-- <div class="main-page-content">
         <div class="h-100 overflow-auto">
             <app-login (login)="toHome()"></app-login>
         </div>
     </div> -->
+
+    <div class="main-page-bottom">
+        <app-footer></app-footer>
+    </div>
 </div>
 
 <!-- TODO ADD LOADER -->
