Google Maps WIP

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,11 @@
+<!-- WELCOME TEXT -->
 <div class="row justify-content-center align-items-center mb-5">
     <div class="fs-32 text-center">
         Welcome to NBU Logistics!
     </div>
 </div>
+
+<!-- CAROUSEL -->
 <div class="row justify-content-center">
     <div class="carousel-width">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -43,5 +46,17 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+    </div>
+</div>
+
+<div class="row">
+    <!-- GOOGLE MAPS -->
+    <div class="col-10">
+        <google-map></google-map>
+    </div>
+
+    <!-- ADDRESS SECTION -->
+    <div class="col-2">
+
     </div>
 </div>
