--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -49,14 +49,23 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row maps-row-margin justify-content-center align-items-center">
+    <div class="fs-28 text-center">
+        Where you can find us:
+    </div>
+</div>
+
+<div class="row mt-5">
     <!-- GOOGLE MAPS -->
-    <div class="col-10">
-        <google-map></google-map>
+    <div class="col-xl-9">
+        <div class="google-map-wrapper">
+            <!-- WIDTH AND HEIGHT SET THROUGH GLOBAL STYLES -->
+            <google-map [width]="null" [height]="null"></google-map>
+        </div>
     </div>
 
     <!-- ADDRESS SECTION -->
-    <div class="col-2">
+    <div class="col-xl-3">
 
     </div>
 </div>
