--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -35,28 +35,30 @@
 
 .carousel-caption {
     font-weight: 500;
-    text-shadow:
-    -1px -1px 0 #000,  
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .caption-title {
     font-size: 52px;
-    font-family: 'Montserrat';
+    font-family: "Montserrat";
 }
 
 .caption-text {
     font-size: 38px;
-    font-family: 'Exo 2';
+    font-family: "Exo 2";
 }
+
+.maps-row-margin {
+    margin-top: 5.5rem;
+}
+
+
 
 @media only screen and (max-width: 1000px) {
     .caption-title {
         font-size: 40px;
     }
-    
+
     .caption-text {
         font-size: 28px;
     }
@@ -70,7 +72,7 @@
     .caption-title {
         font-size: 34px;
     }
-    
+
     .caption-text {
         font-size: 24px;
     }
@@ -80,7 +82,7 @@
     .caption-title {
         font-size: 30px;
     }
-    
+
     .caption-text {
         font-size: 20px;
     }
@@ -90,7 +92,7 @@
     .caption-title {
         font-size: 28px;
     }
-    
+
     .caption-text {
         font-size: 18px;
     }
