--- a/src/styles.scss
+++ b/src/styles.scss
@@ -421,3 +421,11 @@ button {
     -o-user-select: none;
     user-select: none;
 }
+
+// GOOGLE MAPS
+.google-map-wrapper {
+    .map-container {
+        width: 100%;
+        height: 600px;
+    }
+}
