--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,16 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-calendars/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-dropdowns/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-navigations/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-angular-grids/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-angular-dropdowns/styles/material.css';
+
 html,
 body {
     height: 100%;
@@ -428,4 +439,20 @@ button {
         width: 100%;
         height: 600px;
     }
+}
+
+//SYNCFUSION DATA TABLE
+.e-pager .e-currentitem {
+    background-color: #2e68b3 !important;
+}
+
+.e-input-group:not(.e-float-icon-left):not(.e-float-input)::before,
+.e-input-group.e-control-wrapper:not(.e-float-icon-left):not(.e-float-input)::before,
+.e-input-group:not(.e-float-icon-left):not(.e-float-input)::after,
+.e-input-group.e-control-wrapper:not(.e-float-icon-left):not(.e-float-input)::after {
+    background: #2e68b3 !important;
+}
+
+.e-datetime-wrapper .e-input-group-icon.e-icons.e-active {
+    color: #2e68b3 !important;
 }
