--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,15 +57,68 @@
 
 <div class="row mt-5">
     <!-- GOOGLE MAPS -->
-    <div class="col-xl-9">
+    <div class="col-xl-9 mb-5">
         <div class="google-map-wrapper">
             <!-- WIDTH AND HEIGHT SET THROUGH GLOBAL STYLES -->
-            <google-map [width]="null" [height]="null"></google-map>
+            <google-map [width]="null" [height]="null">
+                <!-- [label]="marker.label"
+                 [title]="marker.title"
+                 [options]="marker.options" -->
+                <map-maker
+                 *ngFor="let marker of markers"
+                 [position]="marker.position"
+                 >
+                </map-maker>
+            </google-map>
         </div>
     </div>
 
     <!-- ADDRESS SECTION -->
-    <div class="col-xl-3">
-        <!-- TODO ADD ADDRESSES -->
+    <div class="col-xl-3 mb-5">
+        <div class="address-wrapper p-2">
+            <div class="address-header d-flex justify-content-center align-items-center text-center">
+                Office locations:
+            </div>
+            <hr class="custom-divider my-2">
+            <div>
+                Sofia:
+            </div>
+            <div>
+                ul. Opulchenska No 35
+            </div>
+            <div>
+                1233
+            </div>
+            <hr class="custom-divider my-2">
+            <div>
+                Sofia:
+            </div>
+            <div>
+                bul. Iliyantsi No 40
+            </div>
+            <div>
+                1220
+            </div>
+            <hr class="custom-divider my-2">
+            <div>
+                Varna:
+            </div>
+            <div>
+                ul. Sredets No 4
+            </div>
+            <div>
+                9003
+            </div>
+            <hr class="custom-divider my-2">
+            <div>
+                Burgas:
+            </div>
+            <div>
+                ul. Oborishte No 68
+            </div>
+            <div>
+                8001
+            </div>
+        </div>
     </div>
 </div>
