--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -52,7 +52,16 @@
     margin-top: 5.5rem;
 }
 
+.address-wrapper {
+    border-radius: 20px;
+    background-color: white;
+    border: 2px solid rgb(170, 167, 167);
+    height: 100%;
+}
 
+.custom-divider {
+    border-top: 1px solid #8c8b8b;
+}
 
 @media only screen and (max-width: 1000px) {
     .caption-title {
