--- a/src/app/offices/offices.component.html
+++ b/src/app/offices/offices.component.html
@@ -6,11 +6,9 @@
         <ejs-grid #normalgrid id='Normalgrid' [dataSource]='data' allowPaging='true' allowSorting='true' allowFiltering='true' [pageSettings]='pageSettings' [editSettings]='editSettings' [toolbar]='toolbar'
          (actionBegin)='actionBegin($event)'>
             <e-columns>
-                <e-column field='OrderID' headerText='Order ID' width='150' textAlign='center' isPrimaryKey='true' [validationRules]='orderIDRules'></e-column>
-                <e-column field='CustomerID' headerText='Customer ID' width='150' textAlign='center' [validationRules]='customerIDRules'></e-column>
-                <e-column field='Freight' headerText='Freight' width='150' format='C2' textAlign='center' editType='numericedit' [validationRules]='freightRules'></e-column>
-                <e-column field='OrderDate' headerText='Order Date' width='150' editType='datetimepickeredit' [format]='formatOptions' textAlign='center'></e-column>
-                <e-column field='ShipCountry' headerText='Ship Country' width='150' textAlign='center' editType='dropdownedit' [edit]='editParams'></e-column>
+                <e-column field='ID' headerText='ID' allowEditing='false' width='150' textAlign='center' isPrimaryKey='true' [validationRules]='idRules'></e-column>
+                <e-column field='Name' headerText='Name' width='150' textAlign='center' [validationRules]='nameRules'></e-column>
+                <e-column field='Address' headerText='Address' allowEditing='false' isPrimaryKey='true' width='150' textAlign='center' [validationRules]='addressRules'></e-column>
             </e-columns>
         </ejs-grid>
     </div>
