--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -83,7 +83,7 @@
               </div>
             </div>
   
-            <button mat-raised-button class="w-100 red-button white-color text-uppercase lg-spaced-text register-button-text font-metropolis-medium" [disabled]="!registerForm.valid" type="submit">
+            <button mat-raised-button class="w-100 blue-nbu-button white-color text-uppercase lg-spaced-text register-button-text font-metropolis-medium" [disabled]="!registerForm.valid" type="submit">
               Register
             </button>
   
