--- a/src/app/send-package/send-package.component.html
+++ b/src/app/send-package/send-package.component.html
@@ -43,6 +43,13 @@
 
                     <div class="mb-3">
                         <mat-form-field class="w-100">
+                            <mat-label>Company</mat-label>
+                            <input matInput type="text" formControlName="company" required>
+                        </mat-form-field>
+                    </div>
+
+                    <div class="mb-3">
+                        <mat-form-field class="w-100">
                             <mat-label>Recipient Address</mat-label>
                             <input matInput type="text" formControlName="recipientAddress" required>
                         </mat-form-field>
