--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -11,6 +11,7 @@
                 <e-column field='E-mail' headerText='E-mail' width='150' textAlign='center' [validationRules]='emailRules'></e-column>
                 <e-column field='Full Name' headerText='Full Name' width='150' textAlign='center' [validationRules]='fullNameRules'></e-column>
                 <e-column field='Role' headerText='Role' width='150' textAlign='center' editType='dropdownedit' [edit]='editParams'></e-column>
+                <!-- TODO ADD PASSWORD COLUMN IN ORDER TO UPDATE AND CREATE NEW EMPLOYEES -->
             </e-columns>
         </ejs-grid>
     </div>
