--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,4 +1,5 @@
-<div class="row mb-3 fs-28">
+<!-- FAKE DATA -->
+<!-- <div class="row mb-3 fs-28">
     Customers:
 </div>
 <div class="row justify-content-center align-items-center">
@@ -10,6 +11,25 @@
                 <e-column field='Username' headerText='Username' width='150' textAlign='center' [validationRules]='usernameRules'></e-column>
                 <e-column field='E-mail' headerText='E-mail' width='150' textAlign='center' [validationRules]='emailRules'></e-column>
                 <e-column field='Full Name' headerText='Full Name' width='150' textAlign='center' [validationRules]='fullNameRules'></e-column>
+            </e-columns>
+        </ejs-grid>
+    </div>
+</div> -->
+
+<div class="row mb-3 fs-28">
+    Customers:
+</div>
+<div class="row justify-content-center align-items-center">
+    <div class="col p-0">
+        <ejs-grid #normalgrid id='Normalgrid' [dataSource]='customers' allowPaging='true' allowSorting='true' allowFiltering='true' [pageSettings]='pageSettings' [editSettings]='editSettings' [toolbar]='toolbar'
+         (actionBegin)='actionBegin($event)'>
+            <e-columns>
+                <e-column field='id' allowEditing='false' headerText='ID' width='150' textAlign='center' isPrimaryKey='true' [validationRules]='idRules'></e-column>
+                <e-column field='username' headerText='Username' width='150' textAlign='center' isPrimaryKey='true' [validationRules]='usernameRules'></e-column>
+                <e-column field='email' headerText='E-mail' width='150' textAlign='center' [validationRules]='emailRules'></e-column>
+                <e-column field='fullName' headerText='Full Name' width='150' textAlign='center' [validationRules]='fullNameRules'></e-column>
+                <e-column field='password' headerText='Password' width='150' textAlign='center' [validationRules]='passwordRules'></e-column>
+                <!-- TODO ADD PASSWORD COLUMN IN ORDER TO UPDATE AND CREATE NEW CUSTOMERS -->
             </e-columns>
         </ejs-grid>
     </div>
