--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -1,4 +1,5 @@
-<div class="row mb-3 fs-28">
+<!-- FAKE DATA -->
+<!-- <div class="row mb-3 fs-28">
     Employees:
 </div>
 <div class="row justify-content-center align-items-center">
@@ -11,7 +12,25 @@
                 <e-column field='E-mail' headerText='E-mail' width='150' textAlign='center' [validationRules]='emailRules'></e-column>
                 <e-column field='Full Name' headerText='Full Name' width='150' textAlign='center' [validationRules]='fullNameRules'></e-column>
                 <e-column field='Role' headerText='Role' width='150' textAlign='center' editType='dropdownedit' [edit]='editParams'></e-column>
-                <!-- TODO ADD PASSWORD COLUMN IN ORDER TO UPDATE AND CREATE NEW EMPLOYEES -->
+            </e-columns>
+        </ejs-grid>
+    </div>
+</div> -->
+
+<div class="row mb-3 fs-28">
+    Employees:
+</div>
+<div class="row justify-content-center align-items-center">
+    <div class="col p-0">
+        <ejs-grid #normalgrid id='Normalgrid' [dataSource]='employees' allowPaging='true' allowSorting='true' allowFiltering='true' [pageSettings]='pageSettings' [editSettings]='editSettings' [toolbar]='toolbar'
+         (actionBegin)='actionBegin($event)'>
+            <e-columns>
+                <e-column field='id' headerText='ID' width='150' textAlign='center' isPrimaryKey='true' [validationRules]='idRules'></e-column>
+                <e-column field='username' headerText='Username' width='150' textAlign='center' isPrimaryKey='true' [validationRules]='usernameRules'></e-column>
+                <e-column field='email' headerText='E-mail' width='150' textAlign='center' [validationRules]='emailRules'></e-column>
+                <e-column field='fullName' headerText='Full Name' width='150' textAlign='center' [validationRules]='fullNameRules'></e-column>
+                <e-column field='role' headerText='Role' width='150' textAlign='center' editType='dropdownedit' [edit]='editParams'></e-column>
+                <e-column field='password' headerText='Password' width='150' textAlign='center' [edit]='passwordRules'></e-column>
             </e-columns>
         </ejs-grid>
     </div>
