--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -59,7 +59,7 @@
 
             <div class="mb-4">
               <div class="mb-2 grey-color">Register as a:</div>
-              <mat-radio-group (change)="onRadioChange($event)" formControlName="role">
+              <mat-radio-group formControlName="role">
                 <mat-radio-button class="mr-5" value="USER" [checked]=true>
                   Client
                 </mat-radio-button>
@@ -71,25 +71,10 @@
                 </mat-radio-button>
               </mat-radio-group>
             </div>
-
-            <div *ngIf="showSecurityKeyForm" class="mb-3">
-              <div class="mb-3">
-                <mat-form-field class="w-100">
-                  <mat-label>Security Key</mat-label>
-                  <input matInput [type]="hideSecurityKey ? 'password' : 'text'" formControlName="securityKey">
-                  <mat-icon class="password-hide-icon pointer unselectable" matSuffix (click)="hideSecurityKey = !hideSecurityKey">{{hideSecurityKey ? 'visibility_off' : 'visibility'}}</mat-icon>
-                  <mat-error>{{getSecurityKeyErrorMessage()}}</mat-error>
-                </mat-form-field>
-              </div>
-            </div>
   
             <button mat-raised-button class="w-100 blue-nbu-button white-color text-uppercase lg-spaced-text register-button-text font-metropolis-medium" [disabled]="!registerForm.valid" type="submit">
               Register
             </button>
-  
-            <!-- <div *ngIf="(authError$ | async)" class="w-100 lg-spaced-text font-metropolis-medium register-error-wrapper p-2 d-flex justify-content-center align-items-center mt-4">
-              Incorrect Email Address and/or Password!
-            </div> -->
           </form>
         </div>
       </div>
