--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -76,7 +76,7 @@
     <!-- ADDRESS SECTION -->
     <div class="col-xl-3 mb-5">
         <div class="address-wrapper p-2">
-            <div class="address-header d-flex justify-content-center align-items-center text-center">
+            <div class="address-header d-flex font-monsterrat justify-content-center align-items-center text-center">
                 Office locations:
             </div>
             <hr class="custom-divider my-2">
