--- a/src/styles.scss
+++ b/src/styles.scss
@@ -307,6 +307,10 @@ mat-sidenav {
     font-size: 14px !important;
 }
 
+.fs-15 {
+    font-size: 15px !important;
+}
+
 .fs-16 {
     font-size: 16px !important;
 }
